# agent-tape

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/summarize_agent/: agent.py  notes.txt  record_tape.py  test_agent.py
src/agent_tape/: __init__.py  _assertions.py  _patch.py  _tape.py  _transport.py  pytest_plugin.py
src/llm_tape/: __init__.py  _patch.py  _transport.py
tapes/: summarize_document.tape.yaml
tests/: conftest.py  test_assertions.py  test_e2e.py  test_streaming.py  test_tape.py
