[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tape"
version = "0.1.0"
description = "Framework-agnostic record/replay test harness for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "testing", "replay", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
dev = [
    "agent-tape[test]",
    "hatch",
    "ruff",
    "mypy",
]

[project.entry-points."pytest11"]
agent_tape = "agent_tape.pytest_plugin"

[project.urls]
Homepage = "https://github.com/yourusername/agent-tape"
Issues = "https://github.com/yourusername/agent-tape/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tape"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
